--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ clap = "3.0.0-beta.2"
 dirs = "3.0"
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-semver = "1.0"
+semver = {version = "1.0", features = ["serde"] }
 anyhow = "1.0"
 tempfile = "3.0"
 flate2 = "1.0"
